fix: address code review findings from PR #24
- add WireMock tests covering array-shaped FETCH_ONE/STORE/NONE branches
  of AbstractFigmaTask.fetchOutput (via ListComments)
- add ExportImage scale bounds tests (valid, below-minimum, above-maximum)
- align accessToken @Schema wording between AbstractFigmaTask and
  FileUpdated trigger
- add runContext.logger() debug/error/info logging in FigmaApi.request,
  ExportImage's direct image download, and the FileUpdated poll loop
- URL-encode path segments (fileKey, projectId, teamId, commentId) the
  same way query values already are, via FigmaApi.encodePathSegment
- add a FigmaApiTest covering the 429 rate-limit mapError branch
- add FileUpdated tests for 403/404 poll failures propagating instead
  of silently stalling
- replace rows.get(0) with rows.getFirst()